--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <div class="container">
         <form class="col-md-6 m-auto py-5">
             <div class="input-group mb-3">
-                <input id="city-name" type="text" class="form-control" placeholder="Enter a your City...">
+                <input id="city-name" type="text" class="form-control" placeholder="Enter a your Location...">
                 <div class="input-group-append">
                     <button onclick="searchTemperature()" type="button" class="btn btn-info">Search</button>
                 </div>
             </div>
         </form>
         <div class="weather-status text-white text-center">
-            <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
-            <h1 id="city">Dhaka</h1>
-            <h3><span id="temp">38.06</span>&deg;C</h3>
-            <h1 id="weather" class="lead">Clouds</h1>
+            <img id="icon-img" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
+            <h1 id="city">Location</h1>
+            <h3><span id="temp">00.00</span>&deg;C</h3>
+            <h1 id="weather" class="lead">Cold</h1>
         </div>
     </div>
     
